local registry changes to kustomize

--- a/kustomize/components/container-images-registry/kustomization.yaml
+++ b/kustomize/components/container-images-registry/kustomization.yaml
@@ -16,26 +16,26 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/adservice
-  newName: CONTAINER_IMAGES_REGISTRY/adservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/adservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/cartservice
-  newName: CONTAINER_IMAGES_REGISTRY/cartservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/cartservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/checkoutservice
-  newName: CONTAINER_IMAGES_REGISTRY/checkoutservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/checkoutservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/currencyservice
-  newName: CONTAINER_IMAGES_REGISTRY/currencyservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/currencyservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/emailservice
-  newName: CONTAINER_IMAGES_REGISTRY/emailservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/emailservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/frontend
-  newName: CONTAINER_IMAGES_REGISTRY/frontend
+  newName: harbor.dubailab.nutanix.local/online-boutique/frontend
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/loadgenerator
-  newName: CONTAINER_IMAGES_REGISTRY/loadgenerator
+  newName: harbor.dubailab.nutanix.local/online-boutique/loadgenerator
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/paymentservice
-  newName: CONTAINER_IMAGES_REGISTRY/paymentservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/paymentservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/productcatalogservice
-  newName: CONTAINER_IMAGES_REGISTRY/productcatalogservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/productcatalogservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/recommendationservice
-  newName: CONTAINER_IMAGES_REGISTRY/recommendationservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/recommendationservice
 - name: us-central1-docker.pkg.dev/google-samples/microservices-demo/shippingservice
-  newName: CONTAINER_IMAGES_REGISTRY/shippingservice
+  newName: harbor.dubailab.nutanix.local/online-boutique/shippingservice
 - name: redis
-  newName: CONTAINER_IMAGES_REGISTRY/redis
+  newName: harbor.dubailab.nutanix.local/online-boutique/redis
