--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -16,7 +16,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - base
-components:
 # - components/cymbal-branding
 # - components/google-cloud-operations
 # - components/memorystore
@@ -26,9 +25,6 @@ components:
 # - components/alloydb
 # - components/single-shared-session
 # - components/spanner
+components:
 - components/service-mesh-istio
-# - components/without-loadgenerator
-# These must be run last and in this order
-# - components/container-images-tag
-# - components/container-images-tag-suffix
-# - components/container-images-registry
+- components/container-images-registry
